Minor tidy ups including newly rendered function list table contributed by mstevens

--- a/modules/ROOT/pages/annexd.adoc
+++ b/modules/ROOT/pages/annexd.adoc
@@ -1,6 +1,9 @@
+== Format of Program and Variables in Memory
+:doctype: book
+
 === Annex D to BBC BASIC (Z80)
 
-=== [#memorymap]#Memory Map#
+==== [#memorymap]#Memory Map#
 
 BBC BASIC (Z80) runs under the CP/M-80 operating system. It requires about 15 Kbytes of code space. The interpreter's internal variables occupy approximately 1 Kbyte of memory
 
@@ -12,7 +15,7 @@ In general, the heap only expands whilst new variables are being declared. Howev
 
 In addition to running your program, the stack is also used 'internally' by the BBC BASIC (Z80) interpreter. Its size fluctuates but, in general, it expands every time you increase the depth of nesting of your program structure and every time you increase the number of local variables in use.
 
-==== [#memorymap]#The Memory Map#
+===== [#memorymap]#The Memory Map#
 .Memory Map by R. T. Russell 
 image::MemoryMapRTRussell.png["Memory Map, by R. T. Russell"]
 
@@ -35,21 +38,21 @@ PRINT TOP-PAGE
 
 '''''
 
-=== [#management]#Memory Management#
+==== [#management]#Memory Management#
 
 There is little you can do to control the growth of the stack. However, with care, you can control the growth of the heap. You can do this by limiting the number of variables you use and by good string variable management.
 
-==== [#limiting]#Limiting the Number of Variables#
+===== [#limiting]#Limiting the Number of Variables#
 
 Each new variable occupies room on the heap. Restricting the length of the names of variables and limiting the number of variables used will limit the size of the heap. However, of the techniques available to you, this is the least rewarding. In addition, it leads to incomprehensible programs because your variable names become meaningless. You should keep this technique in the back of your mind whilst you are programming, but only apply it rigorously if you are really stuck for space.
 
-==== [#stringmanage]#String Management#
+===== [#stringmanage]#String Management#
 
-===== [#garbage]#Garbage Generation#
+====== [#garbage]#Garbage Generation#
 
 Unlike numeric variables, string variables do not have a fixed length. When you create a string variable it is added to the heap and sufficient memory is allocated for the initial value of the string. If you subsequently assign a longer string to the variable there will be insufficient room for it in its original position and the string will have to be relocated with its new value at the top of the heap. The initial area will then become 'dead' and the heap will have grown by the new length of the string. The areas of 'dead' memory are called garbage. As more and more re-assignments take place, the heap grows and eventually there is no more room. Thus, it is possible to run out of room for variables even though there should be enough space.
 
-===== [#stringallocation]#Memory Allocation for String Variables#
+====== [#stringallocation]#Memory Allocation for String Variables#
 
 You can overcome the problem of 'garbage' by reserving enough memory for the longest string you will ever put into a variable before you use it. You do this simply by assigning a string of spaces to the variable. If your program needs to find an empty string the first time it is used, you can subsequently assign a null string to it. The same technique can be used for string arrays. The example below sets up a single dimensional string array with room for 20 characters in each entry, and then empties it.
 
@@ -70,30 +73,28 @@ Assigning a null string to stop$ prevents the space for the last entry in the ar
 
 '''''
 
-=== [#programstorage]#Program Storage in Memory#
+==== [#programstorage]#Program Storage in Memory#
 
 The program is stored in memory in the format shown below. The first program line commences at link:bbckey3.html#page[PAGE].
 
 .Program Storage in Memory by R. T. Russell
 image::ProgramStorageinMemory.png["Program Storage in Memory, by R. T. Russell"]
 
-==== [#linelength]#Line Length#
+===== [#linelength]#Line Length#
 
 The line length includes the line length byte. The address of the start of the next line is found by adding the line length to the address of the start of the current line. The end of the program is indicated by a line length of zero and a line number of &FFFF.
 
-==== [#linenumber]#Line Number#
+===== [#linenumber]#Line Number#
 
 The line number is stored in two bytes, LSB first. The end of the program is indicated by a line number of &FFFF and a line length of zero.
 
-==== [#statements]#Statements#
+===== [#statements]#Statements#
 
 With the exception of the symbols '*', '=' and '[' and the optional reserved word link:bbckey2.html#let[LET], each statement in the line commences with the appropriate reserved word token. Reserved words are tokenised wherever they occur. A token is indicated by bit 7 of the byte being set. Statements within a line are separated by colons.
 
 ==== [#terminator]#Line Terminator#
 
 Each program line (except the last) is terminated by a carriage-return (&0D).
-
-'''''
 
 === [#variablestorage]#Variable Storage in Memory#
 
