--- a/modules/ROOT/pages/bbckey3.adoc
+++ b/modules/ROOT/pages/bbckey3.adoc
@@ -776,13 +776,13 @@ BBC BASIC by default uses pixel coordinates that run from 0 to 1280 left-to-righ
 
 The point 640x512 will always appear at the centre of the screen.
 
-NOTE: 
-===
+[NOTE] 
+====
 You can switch to using normal (non-BBC BASIC, non-scaled) PLOT coordinates by calling:
 ---
 VDU 23,0,192,0
 ---
-===
+====
 
 === Syntax
 
